src/mobius.esc/escjava/tags/escjava-2-0b3/ESCTools/Escjava/test/escjava/test/test40/Static.java
class Static {

    static /*@ non_null @*/ String s = "hello";


    void doit() {
	//@ assert s != null

	s = null;			// error
    }
}
